# zynq-playground

adder-axi-lite/hw/bd/: bd.tcl
adder-axi-lite/hw/rtl/: adder.vhd  slice.vhd
adder-axi-lite/ip_repo/adder_slave_1_0/: component.xml
adder-axi-lite/ip_repo/adder_slave_1_0/drivers/adder_slave_v1_0/data/: adder_slave.mdd  adder_slave.tcl
adder-axi-lite/ip_repo/adder_slave_1_0/drivers/adder_slave_v1_0/src/: Makefile  adder_slave.c  adder_slave.h  adder_slave_selftest.c
adder-axi-lite/ip_repo/adder_slave_1_0/example_designs/bfm_design/: adder_slave_tb.sv  design.tcl
adder-axi-lite/ip_repo/adder_slave_1_0/example_designs/debug_hw_design/: adder_slave_hw_test.tcl  design.tcl
adder-axi-lite/ip_repo/adder_slave_1_0/hdl/: adder.vhd  adder_slave_lite_v1_0_S00_AXI.vhd  tb_adder_axi.sv
adder-axi-lite/sw/: CMakeLists.txt
adder-axi-lite/sw/src/: main.cpp
adder-axi-lite/vivado/: pouet.tcl
adder-gpio/hw/bd/: adder.tcl
adder-gpio/hw/constraints/: constraints.xdc
adder-gpio/hw/rtl/: full_adder.vhd  half_adder.vhd
adder-gpio/sw/: CMakeLists.txt
adder-gpio/sw/src/: main.cpp
aoc25_d1/hw/: project.tcl
aoc25_d1/hw/ip_repo/aoc_1_0/: component.xml
aoc25_d1/hw/ip_repo/aoc_1_0/example_designs/bfm_design/: aoc_tb.sv  design.tcl
aoc25_d1/hw/ip_repo/aoc_1_0/hdl/: aoc.vhd  aoc_slave_lite_v1_0_S00_AXI.vhd  aoc_tb.sv  dial.vhd
aoc25_d1/hw/ip_repo/aoc_1_0/xgui/: aoc_v1_0.tcl
aoc25_d1/hw/ip_repo/slice/: component.xml  slice.vhd
aoc25_d1/hw/ip_repo/slice/xgui/: slice_v1_0.tcl
aoc25_d1/sw/: CMakeLists.txt
aoc25_d1/sw/src/: main.cpp
utils/: generate_fw.jl
(+8 files in other folders)
